--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
 header {
 	border: solid black 1px;
 	overflow: auto;				/* Permet de conserver tous les éléments dans le block lorsque l'on rapetisse la fenêtre */
+	border-radius: 5px;
 }
 
 img {
@@ -23,6 +24,7 @@ aside {
 aside ul {
 	list-style-type: none;
 	border: solid black 1px;
+	border-radius: 5px;
 	margin-top: 0px;
 	padding-left:0px;
 	cursor:pointer;
@@ -51,6 +53,7 @@ aside {
 
 section {
 	border: solid black 1px;
+	border-radius: 5px;
 	padding: 10px;
 	margin-left: 210px;
 	margin-top: 10px;
