--- a/css/style.css
+++ b/css/style.css
@@ -16,11 +16,11 @@ h1 {
 	font-family: "Yatra One";
 }
 
-aside {
+nav {
 	margin-top: 10px;
 }
 
-aside ul {
+nav ul {
 	list-style-type: none;
 	border: solid black 1px;
 	margin-top: 0px;
@@ -28,23 +28,23 @@ aside ul {
 	cursor:pointer;
 }
 
-aside ul li {
+nav ul li {
 	margin-left: 0px;
 	border-bottom: solid black 1px;
 	padding: 10px;
 }
 
-aside ul li:nth-child(3) {
+nav ul li:nth-child(3) {
 	border: none;
 }
 
-aside ul li:hover {
+nav ul li:hover {
 	color:white;
 	background-color: black;
 	font-weight:bold;
 }
 
-aside {
+nav {
 	float:left;
 	width:200px;
 }
