--- a/css/style.css
+++ b/css/style.css
@@ -82,6 +82,10 @@ td:nth-child(3n + 1) {
 	display: none;
 }
 
+.cartes{
+	display: none;
+}
+
 /* formatage du formulaire*/
 
 label {
@@ -109,5 +113,12 @@ form{
 #motiv{
 	height : 150px;
 }
+
+
+#map {
+        width: 100%;
+        height: 400px;
+        background-color: grey;
+      }
 
 
