--- a/css/style.css
+++ b/css/style.css
@@ -67,6 +67,7 @@ table, th, td {
 
 th, td {
 	padding: 5px;
+	height: 20px;
 }
 
 th {
@@ -81,6 +82,7 @@ td:nth-child(3n + 1) {
 .inactif{
 	display: none;
 }
+
 
 /* formatage du formulaire*/
 
@@ -100,14 +102,29 @@ input[type!=input]{
 form div {
 	clear: both;
 }
-/* permet de supprimer l'espace entre le titre et le form
+/* permet de supprimer l'espace entre le titre et le form*/
 form{
 	position: relative;
-	top: -60px;
+	top: -40px;
 }
-*/
+
 #motiv{
 	height : 150px;
 }
+
+
+/* formatage de la cate*/
+
+
+.cartes{
+	display:none;
+}
+
+#map {
+	 width: 100%;
+	 height: 400px;
+	 background-color: grey;
+ }
+
 
 
