--- a/css/style.css
+++ b/css/style.css
@@ -97,7 +97,7 @@ td:nth-child(3n + 1) {
 
 /* formatage du formulaire*/
 
-label {
+#inscription label {
 	float: left;
 	font-weight: bold;
 	width:150px;
@@ -112,12 +112,12 @@ input:not([type=text]){
 	clear: right;
 }
 
-form div {
+#inscription div {
 	clear: both;
 }
 
 /* permet de supprimer l'espace entre le titre et le form*/
-form{
+#inscription{
 	position: relative;
 	top: -40px;
 }
@@ -129,5 +129,28 @@ form{
 	 background-color: ghostwhite;
 }
 
+/* formatage du champ recherche*/
+
+#recherche{
+	float: right;
+	padding-bottom: 5px;
+}
+
+#recherche input{
+	border-top:thin solid  #e5e5e5;
+	border-right:thin solid #e5e5e5;
+	border-bottom:0;
+	border-left:thin solid  #e5e5e5;
+	box-shadow:0px 1px 1px 1px #e5e5e5;
+	float:left;
+	height:17px;
+	margin:.8em 0 0 .5em;
+	outline:0;
+	padding:.4em 0 .4em .6em;
+	width:183px;
+	background-image: url("../images/loupe.png");
+	background-position: right ;
+	background-repeat: no-repeat;
+}
 
 
